--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
 	<body>
 		<div id="root"></div>
 		<script src="SecretSharingPads.jsx"></script>
+		<script src="encrypt.js"></script>
 	</body>
 </html>
