--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Secret Sharing</title>
+		<title>Secret Sharing Pad Creator</title>
 	</head>
 	<body>
 		<div id="root"></div>
-		<script src="SecretSharingPads.jsx"></script>
-		<script src="encrypt.js"></script>
+		<script src="index.jsx"></script>
 	</body>
 </html>
