--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Secret Sharing Pad Creator</title>
 	</head>
-	<body>
+	<body class="form-page">
 		<div id="root"></div>
 		<script src="index.jsx"></script>
 	</body>
